# SubAligner

./: .gitignore  README.md  package-lock.json  package.json  项目概述.md
.github/workflows/: build.yml
engine/: build.py  main.py  requirements.txt
engine/api/: align.py  audio.py  export.py  model.py  silence.py
engine/core/: aligner.py  audio_processor.py  ffmpeg_utils.py  silence_remover.py  srt_generator.py  srt_remapper.py  text_processor.py  vad.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.vue  AudioUploader.vue  ProgressOverlay.vue  ScriptEditor.vue  SubtitleList.vue
src/composables/: useApi.ts
src/stores/: project.ts  settings.ts
src/utils/: srt.ts
src/views/: HomeView.vue
