[package]
name = "subaligner"
version = "1.0.0"
description = "配音文案字幕生成器 - AI 强制对齐 + 去静音"
authors = ["SubAligner"]
edition = "2021"

[lib]
name = "subaligner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
